# AuNaFork

./: EKFDFData.txt  EKFData.txt
src/auna_gazebo/models/race_car/: model.urdf
src/auna_scenarios/launch/: scenario_platooning.launch.py
src/ekf/: CMakeLists.txt  package.xml
src/ekf/include/ekf/: ekf_node.hpp
src/ekf/launch/: ekf_node.launch.py
src/ekf/src/: ekf_node.cpp  ekf_node_main.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/include/imu/: imu_node.hpp
src/imu/launch/: imu_node.launch.py
src/imu/src/imu_node/: imu_node.cpp  imu_node_main.cpp
src/odom/: CMakeLists.txt  package.xml
src/odom/include/odom/: odom_node.hpp
src/odom/launch/: odom_node.launch.py
src/odom/src/odom_node/: odom_node.cpp  odom_node_main.cpp
